# ferb

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  ferb.toml  grocery-goal.json
.github/workflows/: ci.yml  release.yml
crates/ferb-agent-core/: Cargo.toml
crates/ferb-agent-core/src/: lib.rs
crates/ferb-agent-core/tests/: switchboard_tests.rs
crates/ferb-approver/: Cargo.toml
crates/ferb-approver/src/: lib.rs
crates/ferb-cli/: Cargo.toml  docker-compose.yml
crates/ferb-cli/artifacts/: confirmed-goal  define-goal
crates/ferb-cli/prompts/: analyst.md  define-goal-reviewer.md  develop-plan.md  planner.md
crates/ferb-cli/src/: main.rs  run.rs  setup.rs
crates/ferb-cli/tests/: switchboard_integration.rs
crates/ferb-cli/workflows/: default.yaml  web-development.yaml
crates/ferb-core/: Cargo.toml
crates/ferb-core/src/: lib.rs  switchboard.rs  tramway.rs  types.rs
crates/ferb-kanban-manager/: Cargo.toml
crates/ferb-kanban-manager/src/: lib.rs
crates/ferb-message-admin/: Cargo.toml
crates/ferb-message-admin/src/: lib.rs
crates/ferb-moderator/: Cargo.toml
crates/ferb-moderator/src/: lib.rs
crates/ferb-reviewer/: Cargo.toml
crates/ferb-reviewer/src/: lib.rs
crates/ferb-user-proxy/: Cargo.toml
crates/ferb-user-proxy/src/: lib.rs
crates/ferb-utils/: Cargo.toml
crates/ferb-utils/src/: lib.rs
crates/ferb-worker/: Cargo.toml
crates/ferb-worker/src/: lib.rs
docker/sandbox/: Dockerfile
prompts/: analyst.md  artifact-reviewer.md  create-artifact.md  define-goal-reviewer.md  develop-plan.md  goal-reviewer.md  maker-data.md  maker.md  plan-reviewer.md  planner.md  test-planner.md  test-reviewer.md
workflows/: default.yaml  web-development.yaml
