[workspace]
members = [
    "crates/ferb-core",
    "crates/ferb-utils",
    "crates/ferb-moderator",
    "crates/ferb-user-proxy",
    "crates/ferb-approver",
    "crates/ferb-reviewer",
    "crates/ferb-worker",
    "crates/ferb-cli",
]
resolver = "2"

[workspace.dependencies]
ferb-core = { path = "crates/ferb-core" }
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
