[package]
name = "ferb-approver"
version = "0.1.0"
edition = "2021"

[dependencies]
ferb-core = { path = "../ferb-core" }
ferb-agent-core = { path = "../ferb-agent-core" }
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.6"
