[package]
name = "ferb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ferb-core = { path = "../ferb-core" }
ferb-moderator = { path = "../ferb-moderator" }
ferb-user-proxy = { path = "../ferb-user-proxy" }
ferb-approver = { path = "../ferb-approver" }
ferb-reviewer = { path = "../ferb-reviewer" }
ferb-worker = { path = "../ferb-worker" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
