[package]
name = "ferb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ferb-core = { path = "../ferb-core" }
ferb-agent-core = { path = "../ferb-agent-core" }
ferb-moderator = { path = "../ferb-moderator" }
ferb-user-proxy = { path = "../ferb-user-proxy" }
ferb-approver = { path = "../ferb-approver" }
ferb-reviewer = { path = "../ferb-reviewer" }
ferb-worker = { path = "../ferb-worker" }
ferb-kanban-manager = { path = "../ferb-kanban-manager" }
ferb-message-admin = { path = "../ferb-message-admin" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = "0.14"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
