[package]
name = "ferb-kanban-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ferb-core = { workspace = true }
ferb-agent-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
