[package]
name = "ferb-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
ferb-core = { path = "../ferb-core" }
ferb-agent-core = { path = "../ferb-agent-core" }
ferb-utils = { path = "../ferb-utils" }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.6"
